--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,7 +8,7 @@ jobs:
     container: 
       image: mcr.microsoft.com/dotnet/core/sdk:3.1.100-preview3-bionic
     
-    runs-on: ubuntu-16.04    
+    runs-on: ubuntu-latest    
     
     steps:    
     
