--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,7 +6,7 @@ jobs:
   build:    
     
     container: 
-      image: mcr.microsoft.com/dotnet/core/sdk:3.1.100-preview3-bionic
+      image: mcr.microsoft.com/dotnet/core/sdk:3.1
     
     runs-on: ubuntu-latest    
     
